Refactor module agent, seat